0024928: Visualization - FSAA is not working in ray-tracing mode